#Set OIS directory
set (OIS_DIR $ENV{OIS_HOME})
find_package(OIS)
		
gass_create_dep_target(OIS "${OIS_INCLUDE_DIRS}" "${OIS_LIBRARIES}")
gass_setup_plugin(GASSPluginOIS OIS)

if(GASS_INSTALL_DEP_BINARIES)
		install(FILES ${OIS_BINARY_REL} DESTINATION ${GASS_INSTALL_BIN_DIR_RELEASE} CONFIGURATIONS Release)
		install(FILES ${OIS_BINARY_DBG} DESTINATION ${GASS_INSTALL_BIN_DIR_DEBUG} CONFIGURATIONS Debug)

		FILE(COPY ${OIS_BINARY_REL} DESTINATION  ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/release)
		FILE(COPY ${OIS_BINARY_DBG} DESTINATION  ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/debug)
endif()


