find_package(OpenALExt)
gass_create_dep_target(OpenAL "${OPENAL_INCLUDE_DIR}" "${OPENAL_LIBRARY}")
gass_setup_plugin(GASSPluginOpenAL OpenAL)

if(GASS_INSTALL_DEP_BINARIES)
		install(FILES ${OPENAL_BIN_FILES_RELEASE} DESTINATION ${GASS_INSTALL_BIN_DIR_RELEASE} CONFIGURATIONS Release)
		install(FILES ${OPENAL_BIN_FILES_RELEASE} DESTINATION ${GASS_INSTALL_BIN_DIR_DEBUG} CONFIGURATIONS Debug)

		FILE(COPY ${OPENAL_BIN_FILES_RELEASE} DESTINATION  ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/release)
		FILE(COPY ${OPENAL_BIN_FILES_RELEASE} DESTINATION  ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/debug)
endif()
